# transcrobes

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CODE_OF_CONDUCT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.backups  Dockerfile.base  Dockerfile.sworker  Dockerfile.transcrobes  Dockerfile.web  Dockerfile.worker  README.md  build-all-push-deploy-local.sh  build-all-push-remote.sh  dev-requirements.txt  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  redeploy-local.sh  requirements.txt  setup.cfg  vars.sh
backend/app/: .gitignore  alembic.stats.ini  dev-requirements.txt  fworker-start.sh  gunicorn_conf.py  mypy.ini  prestart.sh  pyproject.toml  requirements.txt  runlocal.sh  setup.cfg  start-reload.sh  start-uvicorn.sh  start.sh  sworker-start.sh  uvicorn_forced_reload.py
backend/app/alembic/: README  env.py
backend/app/alembic-stats/: env.py
backend/app/alembic-stats/versions/: 206be8bfcce8_add_read_stats.py  43735f277da4_initial.py  5394c1f09714_add_read_stats_word_count.py  570751bc1e2b_add_activity_stats.py
backend/app/alembic/versions/: 077b4277d185_reimplement_english.py  425730afbbcd_add_first_success_date_to_card.py  563a8fb92548_make_usersurvey_commoninfo.py  5e6900f92108_add_qa_with_openai.py  5f9adbe6b448_add_en_zhhans_english.py  770d8836cf2f_test_add_lower_indexes.py  87975a1dc9ac_more_more_questions_stuff.py  88e3934f8af5_added_userdictionary_table.py  8e524de71bb1_more_questions_stuff.py  a0d6e5ff36a2_test_add_lower_indexes_bbis.py  a2798472ac31_added_is_default_column_to_userlist_for_.py  ade3b08c9f1f_initial.py  bc519998700d_add_import_content_source_url_and_extra_.py  be3e12a5916b_add_en_zhhans_english_bis.py  c02fc278261c_add_streamdetails.py  c15f86274630_increase_import_file_name_maxlen.py  c7e19df869b4_add_survey_lang_pair_data.py  cbffb9fa8161_allow_multiple_levels_of_word_knowing_.py  cd0ae0099bd7_added_recentsentences_table.py  ee6c1c9714dc_add_teacher.py  f6f1f75739c6_migrate_userword_table.py
backend/app/app/: etypes.py  fworker.py  main.py  ndutils.py  perdomain.py  python_pre_start.py  python_pre_start_stats.py  stats.py  sworker.py  sworker_async.py  tests_pre_start.py  unicode_ranges.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py  graphql.py  subs.py  types.py
backend/app/app/api/api_v1/endpoints/: data.py  enrich.py  login.py  tables.py  users.py  utils.py
backend/app/app/api/api_v1/static/: graphiql.html
backend/app/app/broadcaster/: README.md  _base.py
backend/app/app/broadcaster/_backends/: postgres.py
backend/app/app/cache/: __init__.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_user.py
backend/app/app/data/: __init__.py  asgi.py  context.py  filter.py  models.py
backend/app/app/data/importer/: __init__.py  common.py  subs.py
backend/app/app/data/stats/: __init__.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py  statsbase.py
backend/app/app/email-templates/: .prettierrc
backend/app/app/email-templates/src/en/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/app/email-templates/src/zh-Hans/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/app/en/: __init__.py  lemmatize.py
backend/app/app/en/metadata/: subtlex.py
backend/app/app/en/transliterate/cmu/: __init__.py
backend/app/app/en_zhhans/translate/: abc.py  goo.py
backend/app/app/enrich/: __init__.py  cache.py  etypes.py  lzstring.py  models.py  sqlite_definitions.py
backend/app/app/enrich/apis/: bing.py
backend/app/app/enrich/data/: __init__.py
backend/app/app/enrich/lemmatize/: __init__.py  no_op.py
backend/app/app/enrich/metadata/: __init__.py
backend/app/app/enrich/parse/: __init__.py
backend/app/app/enrich/translate/: __init__.py  bing.py
backend/app/app/enrich/transliterate/: __init__.py  bing.py
backend/app/app/generative/: lib.py
backend/app/app/generative/openai/: mcq.py
backend/app/app/lemmatize/: __init__.py  no_op.py
backend/app/app/models/: __init__.py  data.py  lookups.py  migrated.py  mixins.py  stats.py  user.py
backend/app/app/schemas/: __init__.py  cache.py  event.py  files.py  token.py  user.py
backend/app/app/subs/: __init__.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/crud/: test_user.py
backend/app/app/tests/utils/: user.py  utils.py
backend/app/app/worker/: faustus.py
backend/app/app/zhhans/: __init__.py
backend/app/app/zhhans/metadata/: hsk.py  subtlex.py
backend/app/app/zhhans_en/translate/: __init__.py  abc.py  ccc.py
backend/app/scripts/: alembic.sh  runtmp.sh
(+599 files in other folders)
