[tool.poetry]
name = "transcrobes"
version = "0.11.5"
description = ""
authors = ["Anton Melser <anton@transcrob.es>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {version = "^0.17.4", extras = ["standard"]}
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.8.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.1"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
python-jose = "^3.3.0"
asyncpg = "^0.25.0"
strawberry-graphql = "^0.114.0"
aiohttp-retry = "^2.4.5"
aiohttp = "^3.7.4"
webvtt-py = "^0.4.6"
broadcaster = { git = "https://github.com/transcrobes/broadcaster.git", branch = "pg_reliability", extras = ["postgres"] }
dawn = "^0.11.0"
bs4 = "^0.0.1"
aiokafka = "^0.7.1"
pymemcache = "^3.5.0"
mmh3 = "^3.0.0"
OpenCC = "^1.1.3"
python-magic = "^0.4.24"
logging_tree = "^1.9"
aiofiles = "^0.8.0"
pytz = "2022.1"
Unidecode = "^1.3.2"
faust-streaming = {extras = ["rocksdb"], version = "^0.8.2"}
lzstring = "^1.0.4"
textile = "^4.0.2"
zhon = "^1.1.5"
pinyinsplit = "^0.1.4"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
autoflake = "^1.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pre-commit = "^2.19.0"
pylint = "^2.13.9"
black = "^22.3.0"
httpx = "^0.23.0"

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.messages_control]
# I0011 Warning locally suppressed using disable-msg
# disabling wrong-import-order because isort is run in pre-commit, pylint ignores [tool.isort] in this file
# and I can't work out how to get pylint to consider 'known-first-party'
disable = """
    invalid-name,
    logging-fstring-interpolation,
    fixme,
    I0011,
    missing-docstring,
    C0330,
    too-few-public-methods,
    too-many-arguments,
    C0326,
    pointless-string-statement,
    no-member,
    R0901,
    R0801,
    wrong-import-order,
    too-many-instance-attributes,
"""

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma.
good-names = "i,j,k,ex,_,f,e,s,w,li,t"

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
