[project]
name = "transcrobes"
version = "0.27.2"
description = ""
requires-python = ">=3.11"
authors = [{ name = "Anton Melser", email = "anton@transcrob.es" }]
license = { file = "LICENSE" }
dependencies = [
  "user-agents",
  "pysubs2",
  "pyjson5",
  "requests",
  "uvicorn[standard] >= 0.18.1",
  "fastapi >= 0.85.0",
  "python-multipart",
  "email-validator",
  "requests",
  "passlib[bcrypt]",
  "tenacity",
  "pydantic",
  "emails",
  "raven",
  "gunicorn",
  "Jinja2",
  "psycopg[binary]",
  "alembic",
  "SQLAlchemy",
  "python-jose",
  "asyncpg",
  "strawberry-graphql",
  "aiohttp-retry",
  "aiohttp",
  "webvtt-py",
  "dawn",
  "bs4",
  "aiokafka",
  "pymemcache",
  "mmh3",
  "python-magic",
  "logging_tree",
  "aiofiles",
  "pytz",
  "Unidecode",
  "lzstring",
  "textile",
  "zhon",
  "pinyinsplit",
  "PyGithub",
  "OpenCC",
  "orjson",
  "pytest-asyncio",
  "faust-streaming",
]

[project.optional-dependencies]
dev = [
  "pip-tools",
  "pytest",
  "mypy",
  "autoflake",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "pylint",
  "black",
  "httpx",
]

[project.urls]
Homepage = "https://transcrob.es/"
Documentation = "https://transcrob.es/"
"Bug Tracker" = "https://github.com/transcrobes/transcrobes/issues"
Discussions = "https://github.com/transcrobes/transcrobes/discussions"

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.messages_control]
# I0011 Warning locally suppressed using disable-msg
# disabling wrong-import-order because isort is run in pre-commit, pylint ignores [tool.isort] in this file
# and I can't work out how to get pylint to consider 'known-first-party'
disable = """
    invalid-name,
    logging-fstring-interpolation,
    fixme,
    I0011,
    missing-docstring,
    C0330,
    too-few-public-methods,
    too-many-arguments,
    C0326,
    pointless-string-statement,
    no-member,
    R0901,
    R0801,
    wrong-import-order,
    too-many-instance-attributes,
"""

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma.
good-names = "i,j,k,ex,_,f,e,s,w,li,t"

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
